# messenger-client

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
.cache/clangd/index/: AsyncClientConnection.cpp.12A736212585C42A.idx  AsyncClientConnection.h.CBBD9DFD9632A208.idx  ChatWindow.cpp.7E50E4466EDE7180.idx  ChatWindow.h.DA005F05686FB201.idx  MainWindow.cpp.DE7AF58D971E2024.idx  MainWindow.h.7EBA8B2A5A6C84E3.idx  SignIn.cpp.21E9BF3A06F14102.idx  SignIn.h.C84FDC1D07C64B3D.idx  SignUp.cpp.D9A2BF6664336304.idx  SignUp.h.ADAF95EBADC4DC09.idx  main.cpp.4748359BA109C56F.idx
src/: main.cpp
src/auth/: CMakeLists.txt  SignIn.cpp  SignIn.h  SignUp.cpp  SignUp.h
src/chat_window/: CMakeLists.txt  ChatWindow.cpp  ChatWindow.h
src/connection/: AsyncClientConnection.cpp  AsyncClientConnection.h  CMakeLists.txt
src/main_window/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
